tests/NormalTests/paczka1/small_fuzzy/12375262.err
Error in line 11: Uxmtai A405 70,7
Error in line 14: Uxmtai S207 30,5
